Add heading and basic meta information

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,10 +2,20 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="IPL visualization">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" type = "image/png" href = "https://i.postimg.cc/m2QBFXXL/IPL.png">
     <title>IPL DATA VISUALISATION</title>
 </head>
 <body>
-    <h1>Hello wolrd!</h1>
+  <header>
+    <h1>IPL DATA VISUALISATION</h1>
+  </header>
+  
+  <main>
+
+  </main>
+
+
 </body>
 </html>
