--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "icon" type = "image/png" href = "https://i.postimg.cc/m2QBFXXL/IPL.png">
     <title>IPL DATA VISUALISATION</title>
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
   <header>
