Add app.js script

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,10 +14,10 @@
   </header>
   
   <main>
-
+    
   </main>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
-
+  <script src="./app.js"></script>
 </body>
 </html>
