Add team won both toss and match container

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,7 +14,7 @@
   </header>
   
   <main>
-    
+    <div id="teams-won-matches-and-toss" class="graph-style"></div>
   </main>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
