Add highest times player of the match container

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,6 +15,7 @@
   
   <main>
     <div id="teams-won-matches-and-toss" class="graph-style"></div>
+    <div id="player-of-the-match-per-season" class="graph-style"></div>
   </main>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
