--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,6 +16,7 @@
   <main>
     <div id="teams-won-matches-and-toss" class="graph-style"></div>
     <div id="player-of-the-match-per-season" class="graph-style"></div>
+    <div id="strike-rate-of-player" class="graph-style"></div>
   </main>
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
