Add visualizeMatchesPlayedPerYear container

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="IPL visualization">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "icon" type = "image/png" href = "https://i.postimg.cc/m2QBFXXL/IPL.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="IPL visualization" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://i.postimg.cc/m2QBFXXL/IPL.png"
+    />
     <title>IPL DATA VISUALISATION</title>
-    <link href="./style.css" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <h1>IPL DATA VISUALISATION</h1>
-  </header>
-  
-  <main>
-    <div id="teams-won-matches-and-toss" class="graph-style"></div>
-    <div id="player-of-the-match-per-season" class="graph-style"></div>
-    <div id="strike-rate-of-player" class="graph-style"></div>
-  </main>
+    <link href="./style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <h1>IPL DATA VISUALISATION</h1>
+    </header>
 
-  <script src="https://code.highcharts.com/highcharts.js"></script>
-  <script src="./app.js"></script>
-</body>
+    <main>
+      <div id="matches-played-per-year" class="graph-style"></div>
+    </main>
+
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="./app.js"></script>
+  </body>
 </html>
