--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,6 +19,7 @@
 
     <main>
       <div id="matches-played-per-year" class="graph-style"></div>
+      <div id="matches-won-by-each" class="graph-style"></div>
     </main>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
