--- a/src/public/index.html
+++ b/src/public/index.html
@@ -21,6 +21,7 @@
       <div id="matches-played-per-year" class="graph-style"></div>
       <div id="matches-won-by-each" class="graph-style"></div>
       <div id="extra-runs" class="graph-style"></div>
+      <div id="economyRate" class="graph-style"></div>
     </main>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
