Add visualizestrikeRateOfPlayer's container

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,6 +23,7 @@
       <div id="extra-runs" class="graph-style"></div>
       <div id="economyRate" class="graph-style"></div>
       <div id="teams-won-matche-and-toss" class="graph-style"></div>
+      <div id="strike-rate-of-player" class="graph-style"></div>
     </main>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
